--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="leadGenerator">
   <head>
-    <title><%=typeof title == 'undefined' ? 'New Sails App' : title%></title>
+    <title><%= pageMeta.title %> | Lead Generator</title>
 
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -30,11 +30,32 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/iziToast.min.css">
     <!--STYLES END-->
   </head>
 
   <body>
-    <%- body %>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Lead Generator</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </nav>
+
+    <div class="page-wrapper">
+      <%- body %>
+    </div>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md">
+            Lead Generator
+            <small class="text-muted">© 2017-2018</small>
+          </div>
+        </div>
+      </div>
+    </footer>
 
 
 
@@ -89,6 +110,11 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dependencies/angular.min.js"></script>
+    <script src="/js/dependencies/iziToast.min.js"></script>
+    <script src="/js/app.js"></script>
+    <script src="/js/controllers/lead-controller.js"></script>
+    <script src="/js/factories/ajax-service.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
